added carmel valley workshop

--- a/workshops/index.html
+++ b/workshops/index.html
@@ -119,6 +119,30 @@
         <p>Booking and information: please email: <a href="alexdongtaichi@gmail.com">alexdongtaichi@gmail.com</a></p>
       </div>
 
+      <a href="#carmel2015-popup" class="animated_popup"><h1>Carmel Valley, California</h1></a>
+      <h2>July 23rd 2015 - July 26th 2015</h2>
+
+      <div id="carmel2015-popup" style="display:none" class="image-popup" class="book-details-popup">
+        <h3>Carmel Valley, California</h3>
+
+        <p>July 23rd 2015 - July 26th 2015</p>
+
+        <p>Master Alex will be coming to Carmel Valley, California from Thursday, July 23 to Sunday,  July 26.  Mornings will generally focus on the Long Form, while afternoons will cover Hao Style and Family Fast Set.</p>
+
+        <p><strong>Thursday:</strong> 2:00-4:30 Long Form
+          <br><strong>Friday:</strong> 9:30-12:00 Long Form
+          <br>2:00-4:30 Hao Style, Family Fast Set
+          <br><strong>Saturday:</strong> 9:30-12:00 Long Form
+          <br>2:00-4:30 Hao Style, Family Fast Set
+          <br><strong>Sunday</strong> 9:30-12:00: Long Form</p>
+
+        <p>The workshop will be held at the Community Church of the Monterey Peninsula on Carmel Valley Road.  The location is not far from shops and restaurants and close to Highway 1.  On Sunday only, it will be at the Carmel Foundation.  For directions and more information contact Tiffany at <a href="mailto:temasuda@hotmail.com">temasuda@hotmail.com</a>.</p>
+
+        <p> For the entire workshop it's $260.  Its $100 for two classes and any additional classes will be $45 each.</p>
+
+        <p>Please, make your check or M.O. to: <br>Alex Dong <br>69-11 Yellowstone Blvd. Apt., B27 <br>Forest Hills, NY 11375</p>  <p>Or Paypal payment payable to: <a href="mailto:alexdongtaichi@gmail.com">alexdongtaichi@gmail.com</a> with fee pay by sender or Send as a gift to avoid fees.</p>
+      </div>
+
       <a href="#tumwater-popup" class="animated_popup"><h1>Pacific North West - Tumwater</h1></a>
       <h2>July 31st 2015 - 3rd August 2015</h2>
       <div id="tumwater-popup" style="display:none" class="image-popup" class="book-details-popup">
