added croatia workshop

--- a/workshops/index.html
+++ b/workshops/index.html
@@ -140,7 +140,7 @@
 
         <p> For the entire workshop it's $260.  Its $100 for two classes and any additional classes will be $45 each.</p>
 
-        <p>Please, make your check or M.O. to: <br>Alex Dong <br>69-11 Yellowstone Blvd. Apt., B27 <br>Forest Hills, NY 11375</p>  <p>Or Paypal payment payable to: <a href="mailto:alexdongtaichi@gmail.com">alexdongtaichi@gmail.com</a> with fee pay by sender or Send as a gift to avoid fees.</p>
+        <p>Please, make your check or M.O. to: <br>Alex Dong <br>69-11 Yellowstone Blvd. Apt., B27 <br>Forest Hills, NY 11375</p>  <p>Or Paypal payment payable to: <a href="mailto:dalexdongtaichi@gmail.com">alexdongtaichi@gmail.com</a> with fee pay by sender or Send as a gift to avoid fees.</p>
       </div>
 
       <a href="#tumwater-popup" class="animated_popup"><h1>Pacific North West - Tumwater</h1></a>
@@ -251,6 +251,19 @@
         <p>Contact Lydia at <a href="mailto:lydiatilli@hotmail.com">lydiatilli@hotmail.com</a> or Yiannis at <a href="mailto:taichiathens@gmail.com">taichiathens@gmail.com</a> with any questions. The booking form can downloaded here: either <a href="greece2015.doc">Word Document</a> or a <a href="greece2015.pdf">PDF</a></p>
 
         <p>We will be glad to see you again in Greece and be your host!</p>
+      </div>
+
+      <a href="#croatia2015" class="animated_popup"><h1>Croatia 2015 Workshop</h1></a>
+      <h2>September 25th 2015 - September 27th 2015</h2>
+
+      <div id="croatia2015" style="display:none" class="image-popup" class="book-details-popup">
+        <h3>Croatia 2015 Workshop</h3>
+
+        <p>September 25th 2015 - September 27th 2015</p>
+
+        <p>More details to follow.</p>
+
+        <p>Contact <a href="mailto:martina.mestr@gmail.com">martina.mestr@gmail.com</a> for details.</p>
       </div>
 
     </div>
