spaced out classes

--- a/classes/crete/index.html
+++ b/classes/crete/index.html
@@ -27,32 +27,20 @@
   </header>
 
   <div class="header-background">
-    <h1>Belo Horizonte, Brazil</h1>
+    <h1>Zagreb, Croatia</h1>
   </div>
 
   <section class="history-classes">
     <div class="history-container classes-container">
-      <h1>Instructor: Luciana Maia and Mateus Prates Pereira</h1></a>
-      <p><a href="http://www.taichichuanbhmg.com.br/">Tai Chi Chaun BH/MG</a></p>
-    </div>
-
-    <div class="history-container classes-container instructor-container">
-      <a href="#tonidemoulin-popup" class="animated_popup"><h1>Instructor: Sandra Arruda</h1></a>
+      <a href="#tonidemoulin-popup" class="animated_popup"><h1>Instructor: Martina Mestrovic</h1></a>
         <div id="tonidemoulin-popup" class="image-popup" style="display:none">
-          <img src="../../assets/images/instructor/sandraarruda.jpg">
-          <h3>Sandra Arruda</h3>
-          <p>Sandra has practiced Tai Chi Chuan Yang Style since 2005 and in 2008 she had the opportunity of attend Master Alex Dong Workshop in Belo Horizonte, Brazil. In that occasion, the talent, power and softness of Master Alex, also his open and clear teachings, impressed her. Since then, Sandra has followed Master Alex in workshops in Brazil and USA.</p>
-
-          <p>Dong Style has changed totally her perspective about Tai Chi Chuan and her goals to improve herself, getting deep into her practice and share her learning. In 2010, she started teaching: an honor and an opportunity to contribute in the spread and growth of this art.</p>
+          <img src="../../assets/images/instructor/martinamestrovic.jpg">
+          <h3>Martina Mestrovic</h3>
+          <p>I was born in 1974 in Zagreb, Croatia. Ever since my early childhood I was fascinated with Chinese culture, especially with calligraphy. I began studying Taiji Quan in 2007, and am slowly discovering the magical system of movements that penetrates all areas of human being. Since I am a formally educated sculptor now making animated films, I have found Taiji to be of great help in understanding the principles of human movement. Taiji Quan perfectly fits within my concept of lifelong education that I strongly believe in. My first workshop with Master Alex Dong was a fantastic experience for me - after several days of intensive practice, I have personally experienced how Taiji affects both mind and body, and I felt rejuvenated. I started to teach Taiji in 2010. I enjoy watching my students as they make progress of their own - their movements becoming more meaningful, the way they re-connect with their bodies. My goal is to introduce this noble art to as many people as possible while continuing my own improvement in Taiji.</p>
         </div>
-      <p>Location: - Rua Congonhas, 700 sala 101 Bairro Santo Antonio BH
-      <br>Location: Grupo Ramal, Praca Ramatis, 161 - Parque Riachuelo BH
-      <br>Classes: Mondays and Wednesdays from 20:30 to 21:30
-      <br>Location: Al. Serra da Mantiqueira, 1398 Vila del Rey Nova Lima
-      <br>Classes: Tuesdays and Fridays from 19:00 to 20:00</p>
-
-      <p>Contact: <a href="mailto:contato@sandrarruda.fot.br">contato@sandrarruda.fot.br</a>
-      <br>Website: <a href="http://projetosentidos.wordpress.com" target="_blank">projetosentidos.wordpress.com</a></p>
+        <p>Location: Zagrebacki Velesajam, Paviljon 25, Zagreb
+        <br>Classes: Tuesdays and Thursdays from 19.00 to 20:30
+        <br>Email: <a href="mailto:taijidongskola@gmail.com">taijidongskola@gmail.com</a></p>
     </div>
   </section>
 
