--- a/classes/zagreb/index.html
+++ b/classes/zagreb/index.html
@@ -30,7 +30,7 @@
     <h1>Zagreb, Croatia</h1>
   </div>
 
-  <section class="history-classes">
+  <section class="history-classes link-container">
     <div class="history-container classes-container">
       <a href="#tonidemoulin-popup" class="animated_popup"><h1>Instructor: Martina Mestrovic</h1></a>
         <div id="tonidemoulin-popup" class="image-popup" style="display:none">
