added crete, greece class

--- a/classes/crete/index.html
+++ b/classes/crete/index.html
@@ -27,20 +27,13 @@
   </header>
 
   <div class="header-background">
-    <h1>Zagreb, Croatia</h1>
+    <h1>Crete, Greece</h1>
   </div>
 
-  <section class="history-classes">
+  <section class="history-classes link-container">
     <div class="history-container classes-container">
-      <a href="#tonidemoulin-popup" class="animated_popup"><h1>Instructor: Martina Mestrovic</h1></a>
-        <div id="tonidemoulin-popup" class="image-popup" style="display:none">
-          <img src="../../assets/images/instructor/martinamestrovic.jpg">
-          <h3>Martina Mestrovic</h3>
-          <p>I was born in 1974 in Zagreb, Croatia. Ever since my early childhood I was fascinated with Chinese culture, especially with calligraphy. I began studying Taiji Quan in 2007, and am slowly discovering the magical system of movements that penetrates all areas of human being. Since I am a formally educated sculptor now making animated films, I have found Taiji to be of great help in understanding the principles of human movement. Taiji Quan perfectly fits within my concept of lifelong education that I strongly believe in. My first workshop with Master Alex Dong was a fantastic experience for me - after several days of intensive practice, I have personally experienced how Taiji affects both mind and body, and I felt rejuvenated. I started to teach Taiji in 2010. I enjoy watching my students as they make progress of their own - their movements becoming more meaningful, the way they re-connect with their bodies. My goal is to introduce this noble art to as many people as possible while continuing my own improvement in Taiji.</p>
-        </div>
-        <p>Location: Zagrebacki Velesajam, Paviljon 25, Zagreb
-        <br>Classes: Tuesdays and Thursdays from 19.00 to 20:30
-        <br>Email: <a href="mailto:taijidongskola@gmail.com">taijidongskola@gmail.com</a></p>
+      <h1>Instructor: Harris Klonizakis</h1></a>
+      <p>Contact: <a href="mailto:xkloni@yahoo.com">xkloni@yahoo.com</a></p>
     </div>
   </section>
 
