added crete, greece class

--- a/classes/index.html
+++ b/classes/index.html
@@ -78,6 +78,7 @@
         <li><a href="london">London, England</a></li>
         <li><a href="grenoble">Grenoble, France</a></li>
         <li><a href="athens">Athens, Greece</a></li>
+        <li><a href="crete">Crete, Greece</a></li>
         <li><a href="siena">Siena, Italy</a></li>
         <li><a href="majorca">Majorca, Spain</a></li>
       </ul>
