added south hampton, new london, olympia , and london classes

--- a/classes/london/index.html
+++ b/classes/london/index.html
@@ -85,6 +85,12 @@
       <br><a href="http://www.streetmap.co.uk/streetmap.dll?postcode2map?EC1R+1XX" target="_blank">Venue: St Mark's Church, Myddelton Square, EC1R 1XX</a> (Tube: Angel)  Open to students who know the Slow Set (free) </p>
       <p>Phone: 07952 593337</p>
     </div>
+
+    <div class="history-container classes-container">
+      <h1>Instructor: Joyce Joly</h1></a>
+      <p>Contact: <a href="mailto:jijtc@btdigitaltv.com">jijtc@btdigitaltv.com</a></p>
+    </div>
+
   </section>
 
   <footer>
