--- a/classes/index.html
+++ b/classes/index.html
@@ -56,11 +56,13 @@
         <li><a href="pacificgrove/">Pacific Grove, California</a></li>
         <li><a href="santabarbara/">Santa Barbara, California</a></li>
         <li><a href="coloradoutah/">Colorado And Utah Borders</a></li>
+        <li><a href="newlondon/">New London, Connecticut</a></li>
         <li><a href="oahu/">Honolulu, Hawaii</a></li>
         <li><a href="longisland/">Long Island, New York</a></li>
         <li><a href="syracuse/">Syracuse, New York</a></li>
         <li><a href="windham/">Windham, New Hampshire</a></li>
         <li><a href="lakechelan/">Lake Chelan, Washington</a></li>
+        <li><a href="olympia/">Olympia, Washington</a></li>
         <li><a href="thurstoncounty/">Thurston County, Washington</a></li>
       </ul>
       <h2>Canada</h2>
@@ -76,6 +78,7 @@
         <li><a href="prague">Prague, Czech Republic</a></li>
         <li><a href="vejle">Vejle, Denmark</a></li>
         <li><a href="london">London, England</a></li>
+        <li><a href="southhampton">South Hampton, England</a></li>
         <li><a href="grenoble">Grenoble, France</a></li>
         <li><a href="athens">Athens, Greece</a></li>
         <li><a href="crete">Crete, Greece</a></li>
