--- a/classes/southhampton/index.html
+++ b/classes/southhampton/index.html
@@ -27,13 +27,13 @@
   </header>
 
   <div class="header-background">
-    <h1>South Hampton, England</h1>
+    <h1>Southampton, England</h1>
   </div>
 
   <section class="history-classes link-container">
     <div class="history-container classes-container">
       <h1>Instructor: Peter Dowding</h1></a>
-      <p>Contact: <a href="mailto:pete@peteandmaria.freeserve.co.u">pete@peteandmaria.freeserve.co.u</a></p>
+      <p>Contact: <a href="mailto:pete@peteandmaria.freeserve.co.uk">pete@peteandmaria.freeserve.co.uk</a></p>
     </div>
   </section>
 
