--- a/classes/index.html
+++ b/classes/index.html
@@ -78,7 +78,7 @@
         <li><a href="prague">Prague, Czech Republic</a></li>
         <li><a href="vejle">Vejle, Denmark</a></li>
         <li><a href="london">London, England</a></li>
-        <li><a href="southhampton">South Hampton, England</a></li>
+        <li><a href="southhampton">Southampton, England</a></li>
         <li><a href="grenoble">Grenoble, France</a></li>
         <li><a href="athens">Athens, Greece</a></li>
         <li><a href="crete">Crete, Greece</a></li>
