--- a/classes/quebec/index.html
+++ b/classes/quebec/index.html
@@ -64,9 +64,25 @@
     </div>
 
     <div class="history-container classes-container instructor-container">
-    <h1>Magog, Quebec</h1>
-    <p>Instructor: Philippe Daviet
-    <br>St-Jean Bosco Church, 900 Sherbrooke Street, Magog
+     <a href="#philipped-popup" class="animated_popup"><h1>Instructor: Philippe Daviet</h1></a>
+        <div id="philipped-popup" class="image-popup" style="display:none">
+          <img src="http://www.taichispirit.org.uk/images/philippe.jpg">
+          <h3>Philippe Daviet</h3>
+          <p>Philippe has gravitated around various martial arts during a large
+          part of his life. His interest in Taiji started in 2001 after having
+          sustained injuries from his other martial activities. He has been
+          attending Master Dong’s workshops since 2010.
+          </p>
+          <p>
+          Both the martial intent and the Taoist philosophy have an equal footing
+          during his classes to respect Taijiquan’s origins.
+          </p>
+          <p>
+          Philippe began instruction in 2013 in the city of Magog, Canada.
+        </div>
+
+    <p>
+    <br>St-Jean Bosco Church, 900 Sherbrooke Street, Magog, Quebec
     <br>Time: Thursdays, 18h30 - 20h30
     <br>Call: 819-574-4203 or Email: <a href="mailto:TaiChi.Magog@gmail.com" target="_blank">TaiChi.Magog@gmail.com</a></p>
     </div>
