--- a/classes/grenoble/index.html
+++ b/classes/grenoble/index.html
@@ -43,9 +43,11 @@
           <p>2000 was the year of my first workshop with Alex Dong in Athens, found by typing the keywords "tai" & "chi" on the Internet. Alex's personality and teaching skills attracted me immediately. Since then, whenever possible, I follow his teaching through his workshops organized in Greece, UK, and the US. The rest of the time I attend a regular tai-chi class in the Grenoble area, taught by Daniel Carriau, a long-term student of Tung Kai Ying. In 2008 Alex Dong encouraged my plan to begin teaching. So I started a beginner's class in my village and another one in Grenoble. The latter class is for elderly people. My oldest students, 94 and 90 years old, are examples for everyone. The art of repeating and of adapting are helping me develop patience. I find teaching an exciting experience and a true opportunity to improve my own practice. At times, students are sharing their experience and the effect of Tai Chi on their daily life. These moments are particularly rewarding. Besides Tai Chi, I have been practicing Hatha Yoga for 12 years and Vipassana meditation, Burmese style, for 5 years. The regular practice of these various ancient arts helps me find balance in our "modern" life.</p>
         </div>
       <p>Association Emouvement
-      <br>Classes on Tuesday: 17:45- 19:00, Salle Les Vignes, Ile verte, Grenoble, on Friday: 17:15- 19:00, Dojo intercommunal, St Martin-le-Vinoux
-      <br>Address: Le village, 38950 Quaix en Chartreuse</p>
-      <p>Tel. +33 (0)476568109 or Email: <a href="mailto:moming@me.com">moming@me.com</a></p>
+      <br>Monday: 17:15- 19:00, ESRF, 71 avenue des martyrs, 38000 Grenoble; 
+      <br>Tuesday: 8:45- 9:45, Maison des Habitants, Centre Ville, 2 rue du Vieux Temple, 38000 Grenoble; 
+      <br>Thursday 20:15- 21:45, Salle Polyvalente, Le Village, 38950 Quaix en Chartreuse
+      <br>Address: 50 place Victor Jaillet, 38950 Quaix en Chartreuse
+      <br>Tel. +33 (0)476568109 or Email: <a href="mailto:moming@me.com">moming@me.com</a></p>
     </div>
   </section>
 
