change NA workshop documents

--- a/workshops/index.html
+++ b/workshops/index.html
@@ -64,6 +64,7 @@
         <br>+ Fri to Sun-$450 6 classes, two night lodging and meals
         <br>+ Sat and Sun-$400 6 classes, with meals and one night lodging
         <br>+ One Day-$200 3 classes, 2 meals</p>
+				<p>Private rooms at $100 to $130 per night. These rooms has 4 bunk beds and a bathroom. For three nights used by 4 people will cost $75 to $88 more per person. </p>
         <p><strong>Training Includes:</strong>
         <br>Building strong structure
         <br>Develop better rooting
