added rosendale, ny workshop

--- a/workshops/index.html
+++ b/workshops/index.html
@@ -265,6 +265,19 @@
         <p>Contact <a href="mailto:martina.mestr@gmail.com">martina.mestr@gmail.com</a> for details.</p>
       </div>
 
+      <a href="#rosendale2015" class="animated_popup"><h1>Rosendale New York-Lifebridge Foundation</h1></a>
+      <h2>November 6th to November 9th 2015</h2>
+
+      <div id="rosendale2015" style="display:none" class="image-popup" class="book-details-popup">
+        <h3>Rosendale New York-Lifebridge Foundation</h3>
+
+        <p>November 6th to November 9th 2015</p>
+
+        <p>Come practice with forms weapons and Push Hands with other enthusiasts and possibly catch a glimpse of the foliage.<p>
+
+        <p>For more information and registration, contact Martha at<a href="mailto:mcheo@hvc.rr.com">mcheo@hvc.rr.com</a> for details.</p>
+      </div>
+
     </div>
   </section>
 
