--- a/workshops/index.html
+++ b/workshops/index.html
@@ -273,7 +273,7 @@
 
         <p>November 6th to November 9th 2015</p>
 
-        <p>Come practice with forms weapons and Push Hands with other enthusiasts and possibly catch a glimpse of the foliage.<p>
+        <p>Come practice with forms weapons and Push Hands with other enthusiasts and possibly catch a glimpse of the foliage.</p>
 
         <p>For more information and registration, contact Martha at<a href="mailto:mcheo@hvc.rr.com">mcheo@hvc.rr.com</a> for details.</p>
       </div>
