--- a/classes/quebec/index.html
+++ b/classes/quebec/index.html
@@ -31,16 +31,21 @@
   </div>
 
   <section class="history-classes">
-    <div class="history-container classes-container">
-      <h1>Loisirs Renaud/Coursol</h1>
-      <p>Centre communautaire St-Louis
-      <br>25 St-Louis Street
-      <br>Laval, Québec, H7G 4W3
-      <br>Monday
-      <br>Beginner-Intermediate : 12:30 to 13:45
-      <br>Advanced : 13:45 to 15:00
-      <br>Tuesday
-      <br>Beginner : 18:30 to 19:45</p>
+      <div class="history-container classes-container instructor-container">
+     <a href="#rejean-popup" class="animated_popup"><h1>Instructor: R&eacute;jean Gardner</h1></a>
+        <div id="rejean-popup" class="image-popup" style="display:none">
+          <img src="http://www.taichispirit.org.uk/images/rejean1.jpg">
+          <h3>R&eacute;jean Gardner</h3>
+          </div>
+      <p>Loisirs Renaud/Coursol
+        <br>Centre communautaire St-Louis
+        <br>25 St-Louis Street
+        <br>Laval, Québec, H7G 4W3
+        <br>Monday
+        <br>Beginner-Intermediate : 12:30 to 13:45
+        <br>Advanced : 13:45 to 15:00
+        <br>Tuesday
+        <br>Beginner : 18:30 to 19:45</p>
     </div>
 
     <div class="history-container classes-container instructor-container">
