--- a/classes/quebec/index.html
+++ b/classes/quebec/index.html
@@ -36,6 +36,29 @@
         <div id="rejean-popup" class="image-popup" style="display:none">
           <img src="http://www.taichispirit.org.uk/images/rejean1.jpg">
           <h3>R&eacute;jean Gardner</h3>
+            <p>R&eacute;jean Gardner is a retired nurse and paramedic, and recipient of the
+            General Governor of Canada Meritorious Service Medal and Emergency
+            Medical Services Exemplary Service Medal.
+            </p>
+            <p>
+            He has accumulated more than 30 years in martial arts practise and
+            karate teaching. He is also assistant instructor in Zazen practise.
+            </p>
+            <p>
+            For several years, he has devoted himself to Yang style Tai Chi Chuan
+            practise and teaching. Since 2005, he has been following Master Alex
+            Dong's teaching through by seminars or clinics in Montreal,
+            New York, Greece and the Westwater annual camp in Utah.
+            </p>
+            <p>
+            He is pleased and proud to be part of Alex Dong International Taijiquan Association.
+            </p>
+            <p>
+            R&eacute;jean teaches in Laval and Montreal, Canada.
+            </p>
+            <p>
+            Email <a href="mailto:info@taichilaval.com">info@taichilaval.com</a>
+            </p>
           </div>
       <p>Loisirs Renaud/Coursol
         <br>Centre communautaire St-Louis
