--- a/workshops/index.html
+++ b/workshops/index.html
@@ -239,11 +239,22 @@
       <h2>September 25th 2015 - September 27th 2015</h2>
 
       <div id="croatia2015" style="display:none" class="image-popup" class="book-details-popup">
-        <h3>Croatia 2015 Workshop</h3>
+        <h3>Croatia</h3>
 
         <p>September 25th 2015 - September 27th 2015</p>
 
-        <p>More details to follow.</p>
+        <p>
+	This year workshop in Croatia will held 25th to 27th September at Sukosan, 
+	  a little place at Adriatic coast very near Zadar airport.</p>
+        <p>
+	September 24th - check in, dinner</br>
+	September 25th and 26th - AM and PM classes</br>
+	September 27th - AM and PM classes, lunch, departure.</p>
+	<p>Price for tution is 200 € or 230 $ pay to Alex</p>
+	<p>Accommodation and food 150 € or 1130 kn pay to Martina</p>
+
+	For vegetarian diet, please contact Martina and 
+	for more information please contact martina.mestr@gmail.com</p>
 
         <p>Contact <a href="mailto:martina.mestr@gmail.com">martina.mestr@gmail.com</a> for details.</p>
       </div>
