--- a/workshops/index.html
+++ b/workshops/index.html
@@ -235,7 +235,7 @@
         <p>We will be glad to see you again in Greece and be your host!</p>
       </div>
 
-      <a href="#croatia2015" class="animated_popup"><h1>Croatia 2015 Workshop</h1></a>
+      <a href="#croatia2015" class="animated_popup"><h1>Croatia</h1></a>
       <h2>September 25th 2015 - September 27th 2015</h2>
 
       <div id="croatia2015" style="display:none" class="image-popup" class="book-details-popup">
