--- a/workshops/index.html
+++ b/workshops/index.html
@@ -253,10 +253,8 @@
 	<p>Price for tution is 200 € or 230 $ pay to Alex</p>
 	<p>Accommodation and food 150 € or 1130 kn pay to Martina</p>
 
-	For vegetarian diet, please contact Martina and 
-	for more information please contact martina.mestr@gmail.com</p>
-
-        <p>Contact <a href="mailto:martina.mestr@gmail.com">martina.mestr@gmail.com</a> for details.</p>
+	<p>For vegetarian diet, please contact Martina and 
+	for any further information contact <a href="mailto:martina.mestr@gmail.com">martina.mestr@gmail.com</a></p>
       </div>
 
       <a href="#rosendale2015" class="animated_popup"><h1>Rosendale New York-Lifebridge Foundation</h1></a>
