--- a/classes/london/index.html
+++ b/classes/london/index.html
@@ -88,7 +88,7 @@
 
     <div class="history-container classes-container">
       <h1>Instructor: Joyce Joly</h1></a>
-      <p>Contact: <a href="mailto:jijtc@btdigitaltv.com">jijtc@btdigitaltv.com</a></p>
+       <p>Class schedule - <a href="http://www.taichispirit.org.uk/" target="_blank">Tai Chi Spirit</a></p>
     </div>
 
   </section>
