--- a/classes/london/index.html
+++ b/classes/london/index.html
@@ -86,8 +86,15 @@
       <p>Phone: 07952 593337</p>
     </div>
 
-    <div class="history-container classes-container">
-      <h1>Instructor: Joyce Joly</h1></a>
+    <div class="history-container classes-container instructor-container">
+      <a href="#joycejoly-popup" class="animated_popup"><h1>Instructor: Joyce Joly</h1></a>
+      <div id="joycejoly-popup" class="image-popup" style="display:none">
+        <h3>Joyce Joly</h3>
+        <img src="http://www.taichispirit.org.uk/images/jij.jpg">
+        </div>
+      <p>Joyce Joly has been practicing tai chi for over 25 years, and has been teaching for 15 years.</p>
+      <p>All of her learning has been with the Dong Family. Firstly with Dong Zeng Chen and now with Alex Dong. Joyce has attended many classes in the UK and abroad taking advantage of the teaching to improve her tai chi.</p>
+      <p>Joyce has a particular interest in teaching older people and intends to start teaching elderly people in residential homes, giving tai chi based exercises.</p>
        <p>Class schedule - <a href="http://www.taichispirit.org.uk/" target="_blank">Tai Chi Spirit</a></p>
     </div>
 
