--- a/classes/london/index.html
+++ b/classes/london/index.html
@@ -97,6 +97,21 @@
       </div>
        <p>Class schedule - <a href="http://www.taichispirit.org.uk/" target="_blank">Tai Chi Spirit</a></p>
     </div>
+    <div class="history-container classes-container">
+    <div class="history-container classes-container instructor-container">
+      <a href="#davidfricke-popup" class="animated_popup"><h1>Instructor: David Fricke</h1></a>
+        <div id="davidfricke-popup" class="image-popup" style="display:none">
+          <h3>David Fricke</h3>
+           <p>David Fricke teaches in East London</p>
+        </div>
+      <p>Fanshawe Community Hall</br>
+     
+Barnmead Road</br>
+Dagenham RM9 5DX</br>
+12:30pm - 1:30pm Tuesdays</br>
+Please make a donation to pay for the hall</br>
+</p>
+    </div>
 
   </section>
 
