--- a/classes/london/index.html
+++ b/classes/london/index.html
@@ -99,18 +99,21 @@
     </div>
     <div class="history-container classes-container">
     <div class="history-container classes-container instructor-container">
-      <a href="#davidfricke-popup" class="animated_popup"><h1>Instructor: David Fricke</h1></a>
-        <div id="davidfricke-popup" class="image-popup" style="display:none">
-          <h3>David Fricke</h3>
-           <p>David Fricke teaches in East London</p>
+      <a href="#davidfricker-popup" class="animated_popup"><h1>Instructor: David Fricker</h1></a>
+        <div id="davidfricker-popup" class="image-popup" style="display:none">
+          <h3>David Fricker</h3>
+           <p>I started martial arts in 1990 in a school named Ying Wu Kwan Kung Fu, where I achieved 3 grades and I also did judo as a child.</p>
+            <p>When I moved from one address to another in Dagenham I changed doctors that was where I met Phillip Shields.
+               I had one lesson of tai chi and felt fantastic and followed Phillip to all his other classes for seven years mainly learning slow set and push hands. Phillip was a great teacher of tai chi and when i met Alex Dong for the first time I could see where his teaching method had come from.
+            <p>I attended classes with Alex in the UK, and the energy and well being was great. I wouldn't say its a cure but it does help dilute physical and mental problems.
+            <p>I like tai chi because it is beneficial to my health and it makes me feel good as long as I keep training. </p>
         </div>
       <p>Fanshawe Community Hall</br>
-     
-Barnmead Road</br>
-Dagenham RM9 5DX</br>
-12:30pm - 1:30pm Tuesdays</br>
-Please make a donation to pay for the hall</br>
-</p>
+        Barnmead Road</br>
+        Dagenham RM9 5DX</br>
+        12:30pm - 1:30pm Tuesdays</br>
+        Please make a donation to pay for the hall</br>
+      </p>
     </div>
 
   </section>
