--- a/classes/london/index.html
+++ b/classes/london/index.html
@@ -104,7 +104,7 @@
           <h3>David Fricker</h3>
            <p>I started martial arts in 1990 in a school named Ying Wu Kwan Kung Fu, where I achieved 3 grades and I also did judo as a child.</p>
             <p>When I moved from one address to another in Dagenham I changed doctors that was where I met Phillip Shields.
-               I had one lesson of tai chi and felt fantastic and followed Phillip to all his other classes for seven years mainly learning slow set and push hands. Phillip was a great teacher of tai chi and when i met Alex Dong for the first time I could see where his teaching method had come from.
+               I had one lesson of tai chi and felt fantastic and followed Phillip to all his other classes for seven years mainly learning slow set and push hands. Phillip was a great teacher of tai chi and when I met Alex Dong for the first time I could see where his teaching method had come from.
             <p>I attended classes with Alex in the UK, and the energy and well being was great. I wouldn't say its a cure but it does help dilute physical and mental problems.
             <p>I like tai chi because it is beneficial to my health and it makes me feel good as long as I keep training. </p>
         </div>
