--- a/classes/london/index.html
+++ b/classes/london/index.html
@@ -113,6 +113,7 @@
         Dagenham RM9 5DX</br>
         12:30pm - 1:30pm Tuesdays</br>
         Please make a donation to pay for the hall</br>
+        Email: <a href="mailto:taichichaun@gmail.com">taichichaun@gmail.com</a>
       </p>
     </div>
 
