--- a/workshops/index.html
+++ b/workshops/index.html
@@ -227,11 +227,22 @@
       <div id="rosendale2015" style="display:none" class="image-popup" class="book-details-popup">
         <h3>Rosendale New York-Lifebridge Foundation</h3>
 
-        <p>November 6th to November 9th 2015</p>
+        <p>November 6th 2015 - November 9th 2015</p>
 
         <p>Come practice with forms weapons and Push Hands with other enthusiasts and possibly catch a glimpse of the foliage.</p>
 
         <p>For more information and registration, contact Martha at <a href="mailto:mcheo@hvc.rr.com">mcheo@hvc.rr.com</a> for details.</p>
+      </div>
+	 <a href="#moncton2015" class="animated_popup"><h1>Moncton</h1></a>
+      	<h2>November 13th 2015 - November 15th 2015</h2>
+            <div id="moncton2015" style="display:none" class="image-popup" class="book-details-popup">
+        <h3>Moncton</h3>
+        <p>November 13th 2015 - November 15th 2015</p>
+        <p>Practice will focus on the Slow Form, Family Fast Set,</br>
+         Knife Set and  Push Hands</p>
+         <p>Registration details to follow.<p>
+         <pPlease contact Claire for more details.
+         Email: <a href="mailto:claire14@nb.sympatico.ca">claire14@nb.sympatico.ca</a> </p>
       </div>
 
     </div>
