--- a/workshops/index.html
+++ b/workshops/index.html
@@ -222,7 +222,7 @@
       </div>
 
       <a href="#rosendale2015" class="animated_popup"><h1>Rosendale New York-Lifebridge Foundation</h1></a>
-      <h2>November 6th to November 9th 2015</h2>
+      <h2>November 6th - November 9th 2015</h2>
 
       <div id="rosendale2015" style="display:none" class="image-popup" class="book-details-popup">
         <h3>Rosendale New York-Lifebridge Foundation</h3>
@@ -241,8 +241,8 @@
         <p>Practice will focus on the Slow Form, Family Fast Set,</br>
          Knife Set and  Push Hands</p>
          <p>Registration details to follow.<p>
-         <pPlease contact Claire for more details.
-         Email: <a href="mailto:claire14@nb.sympatico.ca">claire14@nb.sympatico.ca</a> </p>
+         <pPlease email Claire for more details:
+          <a href="mailto:claire14@nb.sympatico.ca">claire14@nb.sympatico.ca</a> </p>
       </div>
 
     </div>
