--- a/workshops/index.html
+++ b/workshops/index.html
@@ -238,10 +238,10 @@
             <div id="moncton2015" style="display:none" class="image-popup" class="book-details-popup">
         <h3>Moncton</h3>
         <p>November 13th 2015 - November 15th 2015</p>
-        <p>Practice will focus on the Slow Form, Family Fast Set,</br>
+        <p>Practice will focus on the Slow Form, Family Fast Set,
          Knife Set and  Push Hands</p>
          <p>Registration details to follow.<p>
-         <pPlease email Claire for more details:
+         <p>Please email Claire for more details:
           <a href="mailto:claire14@nb.sympatico.ca">claire14@nb.sympatico.ca</a> </p>
       </div>
 
